--- a/package.xml
+++ b/package.xml
@@ -60,6 +60,7 @@
   <exec_depend>rpi_general_robotics_toolbox_py</exec_depend>
   <exec_depend>moveit</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>python-scipy</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
